--- a/SCAPPINO/Venetian_Artz.html
+++ b/SCAPPINO/Venetian_Artz.html
@@ -2234,15 +2234,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(64px, 479px) rotate(0deg);
         transform: translate(0, 0) translate(64px, 479px) rotate(0deg);
 }
-/*#/#*//*#i113.text.css:text/base/css*/
-#i113 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: TradeGothicLTStd-Light; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i113.i114.positioning.css:positioning/base/css.2*/
-#i113 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 287px; height: 68px;
-        -ms-transform: translate(0, 0) translate(16px, 418px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(16px, 418px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(16px, 418px) rotate(0deg);
-        transform: translate(0, 0) translate(16px, 418px) rotate(0deg);
-}
 /*#/#*//*#i89.image.css:image/base/css*/
 #i89 { opacity: 1; }
 /*#/#*//*#i89.i90.positioning.css:positioning/base/css.2*/
@@ -2251,6 +2242,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(128px, 539px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(128px, 539px) rotate(0deg);
         transform: translate(0, 0) translate(128px, 539px) rotate(0deg);
+}
+/*#/#*//*#i113.image.css:image/base/css*/
+#i113 { opacity: 1; }
+/*#/#*//*#i113.i114.positioning.css:positioning/base/css.2*/
+#i113 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 291px; height: 100px;
+        -ms-transform: translate(0, 0) translate(4px, 333px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(4px, 333px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(4px, 333px) rotate(0deg);
+        transform: translate(0, 0) translate(4px, 333px) rotate(0deg);
 }
 /*#/#*//*#i81.shape.css:shape/base/css*/
 #i81 { background-color: #dedede; opacity: 0.00;
@@ -2315,27 +2315,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(76px, 445px) rotate(0deg);
         transform: translate(0, 0) translate(76px, 445px) rotate(0deg);
 }
-/*#/#*//*#i111.font-local.css:font/font-local/css*/
-/*#i111.i112.font-local.css:font-local/css.1*/
-@font-face {
-font-family: 'TradeGothicLTStd-Light';
-src: url('fonts/');
-src: url('fonts/?#iefix') format('embedded-opentype'),
-url('fonts/TradeGothicLTStd-Light.woff') format('woff'),
-url('fonts/') format('truetype'),
-url('fonts/') format('opentype'),
-url('fonts/') format('svg');
-}
-/*#/#*/
-/*#/#*//*#i115.text.css:text/base/css*/
-#i115 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: TradeGothicLTStd-Light; font-size: 20px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i115.i116.positioning.css:positioning/base/css.2*/
-#i115 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 260px; height: 112px;
-        -ms-transform: translate(0, 0) translate(26px, 338px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(26px, 338px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(26px, 338px) rotate(0deg);
-        transform: translate(0, 0) translate(26px, 338px) rotate(0deg);
-}
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -2358,10 +2337,10 @@ url('fonts/') format('svg');
 <img id="i16" src="https://i.imgur.com/GsmTVf2.png"/>
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/PHMZOzz.png"/>
-<!--#/#--><!--#i113.text.html:text/html-->
-<div id="i113">Del 6 de agosto al 16 de septiembre de 2019.</div>
 <!--#/#--><!--#i89.image.html:image/html-->
 <img id="i89" src="https://i.imgur.com/xJqyBh6.png"/>
+<!--#/#--><!--#i113.image.html:image/html-->
+<img id="i113" src="https://i.imgur.com/Ytp0srX.jpg"/>
 <!--#/#--><!--#i81.shape.html:shape/html-->
 <div id="i81"></div>
 <!--#/#--><!--#i70.container.html:container/html-->
@@ -2378,9 +2357,6 @@ url('fonts/') format('svg');
 <img id="i99" src="https://i.imgur.com/Eh14RE9.png"/>
 <!--#/#--><!--#i101.image.html:image/html-->
 <img id="i101" src="https://i.imgur.com/KtnVQHB.png"/>
-<!--#/#--><!--#i111.font.html:font/html-->
-<!--#/#--><!--#i115.text.html:text/html-->
-<div id="i115">¡Compra un pantalón y obtén el 20% de descuento en toda tu compra!</div>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2441,12 +2417,14 @@ bmShow('i16');
 
 /*#/#*//*#i46.i47.positioning.js:positioning/base/js.2*/
 bmShow('i46');
-/*#/#*//*#i113.i114.positioning.js:positioning/base/js.2*/
-bmShow('i113');
 /*#/#*//*#i89.image.js:image/base/js*/
 
 /*#/#*//*#i89.i90.positioning.js:positioning/base/js.2*/
 bmShow('i89');
+/*#/#*//*#i113.image.js:image/base/js*/
+
+/*#/#*//*#i113.i114.positioning.js:positioning/base/js.2*/
+bmShow('i113');
 /*#/#*//*#i81.i82.positioning.js:positioning/base/js.2*/
 bmShow('i81');
 /*#/#*//*#i81.i85.actions.js:actions/base/js.1*/
@@ -2547,8 +2525,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i115.i116.positioning.js:positioning/base/js.2*/
-bmShow('i115');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2592,14 +2568,15 @@ name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i113.text.meta:text/meta*/
-name: Del 6 de agosto al 16 de septiembre de 2019.; customName: false;
-/*#/#*//*#i113.i114.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i89.image.meta:image/meta*/
 name: ICONO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i89.i90.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i113.image.meta:image/meta*/
+name: TEXTO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i113.i114.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i81.shape.meta:shape/meta*/
 name: LINK MAPA;
@@ -2634,10 +2611,4 @@ name: T; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i101.i102.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i111.font.meta:font/meta*/
-name: Web Font: TradeGothicLTStd-Light; type: font-local; customName: ;
-/*#/#*//*#i115.text.meta:text/meta*/
-name: ¡Compra un pantalón y obtén el 20% de descuento en toda tu compra!; customName: false;
-/*#/#*//*#i115.i116.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*/--><!--#/#-->
