--- a/Miniso Marvel/Cube.html
+++ b/Miniso Marvel/Cube.html
@@ -508,7 +508,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 17px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 206px; height: 41px;
         -ms-transform: translate(-50%, -50%) translate(0px, 77px) rotate(0deg);
@@ -828,15 +828,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(258px, 201px) rotate(0deg);
         transform: translate(0, 0) translate(258px, 201px) rotate(0deg);
 }
-/*#/#*//*#i6.i34.text.css:text/base/css*/
-#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 14px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
-/*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
-#i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 224px; height: 52px;
-        -ms-transform: translate(-50%, -50%) translate(1px, 83px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(1px, 83px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(1px, 83px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(1px, 83px) rotate(0deg);
-}
 /*#/#*//*#i6.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
 /*#/#*//*#i60.i61.positioning.css:positioning/base/css.1*/
@@ -854,6 +845,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(67px, 135px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(67px, 135px) rotate(0deg);
         transform: translate(0, 0) translate(67px, 135px) rotate(0deg);
+}
+/*#/#*//*#i6.i34.text.css:text/base/css*/
+#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
+/*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
+#i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 280px; height: 52px;
+        -ms-transform: translate(-50%, -50%) translate(0px, 83px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 83px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 83px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 83px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
@@ -963,12 +963,12 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i40"></div>
 <!--#/#--><!--#i6.i196.image.html:image/html-->
 <img id="i196" src="https://i.imgur.com/Doq2CQA.png"/>
-<!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">¿Algo mejor que un llavero con tu superhéroe favorito? Lo dudo.</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/E6QuowY.jpg"/>
 <!--#/#--><!--#i6.i248.image.html:image/html-->
 <img id="i248" src="https://i.imgur.com/56lXnnD.png"/>
+<!--#/#--><!--#i6.i34.text.html:text/html-->
+<div id="i34">¿Algo mejor que un llavero con tu superhéroe favorito? Lo dudo.</div>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i210.image.html:image/html-->
@@ -1410,10 +1410,6 @@ name: Doq2CQA.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i196.i197.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i6.i34.text.meta:text/meta*/
-name: Texto; customName: 1;
-/*#/#*//*#i34.i35.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i6.i60.image.meta:image/meta*/
 name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
@@ -1424,6 +1420,10 @@ name: CTA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i248.i249.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i6.i34.text.meta:text/meta*/
+name: Texto; customName: 1;
+/*#/#*//*#i34.i35.positioning.meta:positioning/meta.1*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i6.i99.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i99.i100.positioning.meta:positioning/meta.1*/
