--- a/SCAPPINO/Cube1.html
+++ b/SCAPPINO/Cube1.html
@@ -729,11 +729,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i5.i496.image.css:image/base/css*/
 #i496 { opacity: 1; }
 /*#/#*//*#i496.i497.positioning.css:positioning/base/css.1*/
-#i496 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 160px;
-        -ms-transform: translate(0, 0) translate(0px, 129px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 129px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 129px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 129px) rotate(0deg);
+#i496 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 90px;
+        -ms-transform: translate(0, 0) translate(0px, 160px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 160px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 160px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 160px) rotate(0deg);
 }
 /*#/#*//*#i5.i414.image.css:image/base/css*/
 #i414 { opacity: 1; }
@@ -765,11 +765,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i5.i498.image.css:image/base/css*/
 #i498 { opacity: 1; }
 /*#/#*//*#i498.i499.positioning.css:positioning/base/css.2*/
-#i498 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 48px; height: 48px;
-        -ms-transform: translate(0, 0) translate(89px, 181px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(89px, 181px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(89px, 181px) rotate(0deg);
-        transform: translate(0, 0) translate(89px, 181px) rotate(0deg);
+#i498 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 39px; height: 39px;
+        -ms-transform: translate(0, 0) translate(130px, 195px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(130px, 195px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(130px, 195px) rotate(0deg);
+        transform: translate(0, 0) translate(130px, 195px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -830,7 +830,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i6.i500.text.css:text/base/css*/
-#i500 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: TradeGothicLTStd-Light; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+#i500 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i500.i501.positioning.css:positioning/base/css.1*/
 #i500 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 209px; height: 45px;
         -ms-transform: translate(-50%, -50%) translate(1px, 81px) rotate(0deg);
@@ -902,18 +902,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
-/*#/#*//*#i484.font-local.css:font/font-local/css*/
-/*#i484.i485.font-local.css:font-local/css.1*/
-@font-face {
-font-family: 'TradeGothicLTStd-Light';
-src: url('fonts/');
-src: url('fonts/?#iefix') format('embedded-opentype'),
-url('fonts/TradeGothicLTStd-Light.woff') format('woff'),
-url('fonts/') format('truetype'),
-url('fonts/') format('opentype'),
-url('fonts/') format('svg');
-}
-/*#/#*/
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -951,7 +939,7 @@ url('fonts/') format('svg');
 <div id="i354">Perú, ¡el país más rico 
 del mundo!</div>
 <!--#/#--><!--#i5.i496.image.html:image/html-->
-<img id="i496" src="https://i.imgur.com/6tm9GMm.jpg"/>
+<img id="i496" src="https://i.imgur.com/hgC9lX6.jpg"/>
 <!--#/#--><!--#i5.i414.image.html:image/html-->
 <img id="i414" src="https://i.imgur.com/zcgW2DL.jpg"/>
 <!--#/#--><!--#i5.i492.image.html:image/html-->
@@ -1005,7 +993,6 @@ del mundo!</div>
         <span>Swipe</span>
     </div>
 </div>
-<!--#/#--><!--#i484.font.html:font/html-->
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i2.cube.js:cube/js.1*/
@@ -1067,7 +1054,7 @@ var el = document.getElementById('i190');
 
 el.addEventListener('click', function(e){
     /*#i290.i291.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/bt8KTgP3SiFDXEd47'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/PKqPmbYRCKZE85xG9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1084,7 +1071,7 @@ var el = document.getElementById('i228');
 
 el.addEventListener('click', function(e){
     /*#i292.i293.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://goo.gl/maps/bt8KTgP3SiFDXEd47'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://goo.gl/maps/PKqPmbYRCKZE85xG9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1101,7 +1088,7 @@ var el = document.getElementById('i242');
 
 el.addEventListener('click', function(e){
     /*#i294.i295.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/bt8KTgP3SiFDXEd47'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/PKqPmbYRCKZE85xG9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1135,7 +1122,7 @@ var el = document.getElementById('i95');
 
 el.addEventListener('click', function(e){
     /*#i312.i313.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/bt8KTgP3SiFDXEd47'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/PKqPmbYRCKZE85xG9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1152,7 +1139,7 @@ var el = document.getElementById('i460');
 
 el.addEventListener('click', function(e){
     /*#i462.i463.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/bt8KTgP3SiFDXEd47'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/PKqPmbYRCKZE85xG9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1169,7 +1156,7 @@ var el = document.getElementById('i468');
 
 el.addEventListener('click', function(e){
     /*#i470.i471.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://goo.gl/maps/bt8KTgP3SiFDXEd47'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://goo.gl/maps/PKqPmbYRCKZE85xG9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1186,7 +1173,7 @@ var el = document.getElementById('i476');
 
 el.addEventListener('click', function(e){
     /*#i478.i479.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/bt8KTgP3SiFDXEd47'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/PKqPmbYRCKZE85xG9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1231,7 +1218,7 @@ var el = document.getElementById('i464');
 
 el.addEventListener('click', function(e){
     /*#i466.i467.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/bt8KTgP3SiFDXEd47'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/PKqPmbYRCKZE85xG9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1248,7 +1235,7 @@ var el = document.getElementById('i472');
 
 el.addEventListener('click', function(e){
     /*#i474.i475.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://goo.gl/maps/bt8KTgP3SiFDXEd47'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://goo.gl/maps/PKqPmbYRCKZE85xG9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1265,7 +1252,7 @@ var el = document.getElementById('i480');
 
 el.addEventListener('click', function(e){
     /*#i482.i483.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/bt8KTgP3SiFDXEd47'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/PKqPmbYRCKZE85xG9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1354,7 +1341,7 @@ name: Texto; customName: 1;
 /*#/#*//*#i354.i355.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i496.image.meta:image/meta*/
-name: Imagen de Cuadro copy; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: MAPA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i496.i497.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
@@ -1374,8 +1361,8 @@ customName: 1;
 /*#/#*//*#i488.i489.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i498.image.meta:image/meta*/
-name: xJqyBh6.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
+name: ICONO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
 /*#/#*//*#i498.i499.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
@@ -1443,6 +1430,4 @@ customName: 1;
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i484.font.meta:font/meta*/
-name: Web Font: TradeGothicLTStd-Light; type: font-local; customName: ;
 /*#/#*/--><!--#/#-->
