--- a/SCAPPINO/Venetian_Masaryk.html
+++ b/SCAPPINO/Venetian_Masaryk.html
@@ -2247,10 +2247,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i89 { opacity: 1; }
 /*#/#*//*#i89.i90.positioning.css:positioning/base/css.2*/
 #i89 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 38px; height: 38px;
-        -ms-transform: translate(0, 0) translate(128px, 539px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(128px, 539px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(128px, 539px) rotate(0deg);
-        transform: translate(0, 0) translate(128px, 539px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(133px, 542px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(133px, 542px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(133px, 542px) rotate(0deg);
+        transform: translate(0, 0) translate(133px, 542px) rotate(0deg);
 }
 /*#/#*//*#i81.shape.css:shape/base/css*/
 #i81 { background-color: #dedede; opacity: 0.00;
@@ -2322,7 +2322,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i74.image.html:image/html-->
-<img id="i74" src="https://i.imgur.com/yR75vHL.jpg"/>
+<img id="i74" src="https://i.imgur.com/lo27w1R.jpg"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2433,7 +2433,7 @@ var el = document.getElementById('i81');
 
 el.addEventListener('click', function(e){
     /*#i85.i86.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/bt8KTgP3SiFDXEd47'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/PKqPmbYRCKZE85xG9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2448,7 +2448,7 @@ var el = document.getElementById('i70');
 
 el.addEventListener('click', function(e){
     /*#i87.i88.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/bt8KTgP3SiFDXEd47'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/PKqPmbYRCKZE85xG9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2484,7 +2484,7 @@ var el = document.getElementById('i97');
 
 el.addEventListener('click', function(e){
     /*#i105.i106.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/bt8KTgP3SiFDXEd47'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/PKqPmbYRCKZE85xG9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2501,7 +2501,7 @@ var el = document.getElementById('i99');
 
 el.addEventListener('click', function(e){
     /*#i107.i108.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=https://goo.gl/maps/bt8KTgP3SiFDXEd47'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=https://goo.gl/maps/PKqPmbYRCKZE85xG9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2518,7 +2518,7 @@ var el = document.getElementById('i101');
 
 el.addEventListener('click', function(e){
     /*#i109.i110.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/home?status=https://goo.gl/maps/bt8KTgP3SiFDXEd47'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/home?status=https://goo.gl/maps/PKqPmbYRCKZE85xG9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
