--- a/SCAPPINO/Cube2.html
+++ b/SCAPPINO/Cube2.html
@@ -720,11 +720,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i5.i496.image.css:image/base/css*/
 #i496 { opacity: 1; }
 /*#/#*//*#i496.i497.positioning.css:positioning/base/css.1*/
-#i496 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 160px;
-        -ms-transform: translate(0, 0) translate(0px, 116px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 116px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 116px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 116px) rotate(0deg);
+#i496 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 90px;
+        -ms-transform: translate(0, 0) translate(0px, 160px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 160px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 160px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 160px) rotate(0deg);
 }
 /*#/#*//*#i5.i414.image.css:image/base/css*/
 #i414 { opacity: 1; }
@@ -747,11 +747,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i5.i498.image.css:image/base/css*/
 #i498 { opacity: 1; }
 /*#/#*//*#i498.i499.positioning.css:positioning/base/css.2*/
-#i498 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 48px; height: 48px;
-        -ms-transform: translate(0, 0) translate(84px, 181px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(84px, 181px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(84px, 181px) rotate(0deg);
-        transform: translate(0, 0) translate(84px, 181px) rotate(0deg);
+#i498 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 41px; height: 41px;
+        -ms-transform: translate(0, 0) translate(128px, 193px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(128px, 193px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(128px, 193px) rotate(0deg);
+        transform: translate(0, 0) translate(128px, 193px) rotate(0deg);
 }
 /*#/#*//*#i5.i488.image.css:image/base/css*/
 #i488 { opacity: 1; }
@@ -767,10 +767,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i95.i96.positioning.css:positioning/base/css.1*/
 #i95 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(-7px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(-7px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(-7px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(-7px, 0px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i5.i460.image.css:image/base/css*/
 #i460 { opacity: 1; }
@@ -821,7 +821,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i6.i500.text.css:text/base/css*/
-#i500 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: TradeGothicLTStd-Light; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+#i500 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i500.i501.positioning.css:positioning/base/css.1*/
 #i500 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 215px; height: 45px;
         -ms-transform: translate(-50%, -50%) translate(4px, 80px) rotate(0deg);
@@ -893,18 +893,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
-/*#/#*//*#i502.font-local.css:font/font-local/css*/
-/*#i502.i503.font-local.css:font-local/css.1*/
-@font-face {
-font-family: 'TradeGothicLTStd-Light';
-src: url('fonts/');
-src: url('fonts/?#iefix') format('embedded-opentype'),
-url('fonts/TradeGothicLTStd-Light.woff') format('woff'),
-url('fonts/') format('truetype'),
-url('fonts/') format('opentype'),
-url('fonts/') format('svg');
-}
-/*#/#*/
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -939,7 +927,7 @@ url('fonts/') format('svg');
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i496.image.html:image/html-->
-<img id="i496" src="https://i.imgur.com/mRPBXAT.jpg"/>
+<img id="i496" src="https://i.imgur.com/qtSwQlW.jpg"/>
 <!--#/#--><!--#i5.i414.image.html:image/html-->
 <img id="i414" src="https://i.imgur.com/SFd70J8.jpg"/>
 <!--#/#--><!--#i5.i492.image.html:image/html-->
@@ -993,7 +981,6 @@ url('fonts/') format('svg');
         <span>Swipe</span>
     </div>
 </div>
-<!--#/#--><!--#i502.font.html:font/html-->
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i2.cube.js:cube/js.1*/
@@ -1055,7 +1042,7 @@ var el = document.getElementById('i190');
 
 el.addEventListener('click', function(e){
     /*#i290.i291.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/qsx9ne3BbapXgidk6'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/ChWELADC3vznG5N38'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1072,7 +1059,7 @@ var el = document.getElementById('i228');
 
 el.addEventListener('click', function(e){
     /*#i292.i293.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=¡Mira lo que he encontrado! https://goo.gl/maps/qsx9ne3BbapXgidk6'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=https://goo.gl/maps/ChWELADC3vznG5N38'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1089,7 +1076,7 @@ var el = document.getElementById('i242');
 
 el.addEventListener('click', function(e){
     /*#i294.i295.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/home?status=https://goo.gl/maps/qsx9ne3BbapXgidk6'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/home?status=https://goo.gl/maps/ChWELADC3vznG5N38'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1123,7 +1110,7 @@ var el = document.getElementById('i95');
 
 el.addEventListener('click', function(e){
     /*#i312.i313.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/qsx9ne3BbapXgidk6'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/ChWELADC3vznG5N38'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1140,7 +1127,7 @@ var el = document.getElementById('i460');
 
 el.addEventListener('click', function(e){
     /*#i462.i463.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/qsx9ne3BbapXgidk6'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/ChWELADC3vznG5N38'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1157,7 +1144,7 @@ var el = document.getElementById('i468');
 
 el.addEventListener('click', function(e){
     /*#i470.i471.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=¡Mira lo que he encontrado! https://goo.gl/maps/qsx9ne3BbapXgidk6'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=https://goo.gl/maps/ChWELADC3vznG5N38'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1174,7 +1161,7 @@ var el = document.getElementById('i476');
 
 el.addEventListener('click', function(e){
     /*#i478.i479.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/home?status=https://goo.gl/maps/qsx9ne3BbapXgidk6'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/home?status=https://goo.gl/maps/ChWELADC3vznG5N38'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1219,7 +1206,7 @@ var el = document.getElementById('i464');
 
 el.addEventListener('click', function(e){
     /*#i466.i467.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/qsx9ne3BbapXgidk6'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/ChWELADC3vznG5N38'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1236,7 +1223,7 @@ var el = document.getElementById('i472');
 
 el.addEventListener('click', function(e){
     /*#i474.i475.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=¡Mira lo que he encontrado! https://goo.gl/maps/qsx9ne3BbapXgidk6'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=https://goo.gl/maps/ChWELADC3vznG5N38'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1253,7 +1240,7 @@ var el = document.getElementById('i480');
 
 el.addEventListener('click', function(e){
     /*#i482.i483.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/home?status=https://goo.gl/maps/qsx9ne3BbapXgidk6'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/home?status=https://goo.gl/maps/ChWELADC3vznG5N38'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1338,7 +1325,7 @@ name: Background;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i496.image.meta:image/meta*/
-name: Imagen de Cuadro copy; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: MAPA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i496.i497.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
@@ -1353,8 +1340,8 @@ customName: 1;
 /*#/#*//*#i492.i493.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i498.image.meta:image/meta*/
-name: xJqyBh6.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
+name: ICONO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
 /*#/#*//*#i498.i499.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i488.image.meta:image/meta*/
@@ -1427,6 +1414,4 @@ customName: 1;
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i502.font.meta:font/meta*/
-name: Web Font: TradeGothicLTStd-Light; type: font-local; customName: ;
 /*#/#*/--><!--#/#-->
