--- a/Miniso Marvel/Venetian.html
+++ b/Miniso Marvel/Venetian.html
@@ -2167,16 +2167,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(8px, 304px) rotate(0deg);
         transform: translate(0, 0) translate(8px, 304px) rotate(0deg);
 }
-/*#/#*//*#i40.shape.css:shape/base/css*/
-#i40 { background-color: #e62929; opacity: 1;
-}
-/*#/#*//*#i40.i41.positioning.css:positioning/base/css.2*/
-#i40 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 1%;
-        -ms-transform: translate(0, 0) translate(0px, 245px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 245px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 245px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 245px) rotate(0deg);
-}
 /*#/#*//*#i52.image.css:image/base/css*/
 #i52 { opacity: 1; }
 /*#/#*//*#i52.i53.positioning.css:positioning/base/css.2*/
@@ -2341,12 +2331,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#-->
 </div>
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">¿Eres un verdaderos fans de Marvel?</div>
+<div id="i7">¿Eres un verdadero fan de Marvel?</div>
 <!--#/#--><!--#i54.text.html:text/html-->
 <div id="i54">Nada mejor que un llavero, o un aromatizante para el auto con tu superhéroe favorito.
 ¡Ven a partir de este 15 de agosto por el tuyo!</div>
-<!--#/#--><!--#i40.shape.html:shape/html-->
-<div id="i40"></div>
 <!--#/#--><!--#i52.image.html:image/html-->
 <img id="i52" src="https://i.imgur.com/95svJRp.jpg"/>
 <!--#/#--><!--#i16.image.html:image/html-->
@@ -2421,8 +2409,6 @@ document.addEventListener('DOMContentLoaded', function() {
 bmShow('i7');
 /*#/#*//*#i54.i55.positioning.js:positioning/base/js.2*/
 bmShow('i54');
-/*#/#*//*#i40.i41.positioning.js:positioning/base/js.2*/
-bmShow('i40');
 /*#/#*//*#i52.image.js:image/base/js*/
 
 /*#/#*//*#i52.i53.positioning.js:positioning/base/js.2*/
@@ -2435,19 +2421,6 @@ bmShow('i16');
 
 /*#/#*//*#i46.i47.positioning.js:positioning/base/js.2*/
 bmShow('i46');
-/*#/#*//*#i46.i50.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i46');
-
-el.addEventListener('click', function(e){
-    /*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.2*/
-
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
 /*#/#*//*#i62.image.js:image/base/js*/
 
 /*#/#*//*#i62.i63.positioning.js:positioning/base/js.2*/
@@ -2513,7 +2486,7 @@ var el = document.getElementById('i58');
 
 el.addEventListener('click', function(e){
     /*#i74.i75.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=https://www.facebook.com/MinisoMexico/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://goo.gl/maps/yPCyrGgk9ep'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2572,10 +2545,6 @@ data: /*!*/{}/*!*/;
 /*#/#*//*#i54.text.meta:text/meta*/
 name: Nada mejor que un llavero, o un aromatizante para el auto con tu superhéroe favorito. ¡Ven a partir de este 15 de agosto por el tuyo!; customName: false;
 /*#/#*//*#i54.i55.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
-/*#/#*//*#i40.shape.meta:shape/meta*/
-name: Shape 2;
-/*#/#*//*#i40.i41.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i52.image.meta:image/meta*/
 name: MAPA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
