--- a/Miniso Marvel/FadeGeo300x600.html
+++ b/Miniso Marvel/FadeGeo300x600.html
@@ -427,7 +427,7 @@
        
         <div class="tgx_text"> 
                          <span class="tgx_text_title tgx_text_bold">
-              ¿Eres fan de Marvel?
+              ¿Eres un verdadero fan de Marvel?
             </span> <br>
                         <span class="tgx_text_medium" style="color: black;line-height:1.1em; font-size:17px; width:100%; text-align:justify;">
                         <p style="margin-top: 10px; line-height: 1.1em; margin-left: 3px;text-align: center">
