--- a/Gemini/Cube.html
+++ b/Gemini/Cube.html
@@ -929,7 +929,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i230.image.html:image/html-->
-<img id="i230" src="https://i.imgur.com/umaooVa.gif"/>
+<img id="i230" src="https://i.imgur.com/kRMDZQa.gif"/>
 <!--#/#--><!--#i5.i284.image.html:image/html-->
 <img id="i284" src="https://i.imgur.com/GfDtBuJ.png"/>
 <!--#/#--><!--#i5.i296.text.html:text/html-->
@@ -1062,7 +1062,7 @@ var el = document.getElementById('i200');
 
 el.addEventListener('click', function(e){
     /*#i206.i207.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.facebook.com/paramountvideomexico/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.facebook.com/paramountvideomexico/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1148,7 +1148,7 @@ var el = document.getElementById('i268');
 
 el.addEventListener('click', function(e){
     /*#i270.i271.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.facebook.com/paramountvideomexico/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.facebook.com/paramountvideomexico/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1189,7 +1189,7 @@ var el = document.getElementById('i248');
 
 el.addEventListener('click', function(e){
     /*#i250.i251.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+    
 /*#/#*/
 });
 
@@ -1234,7 +1234,7 @@ var el = document.getElementById('i272');
 
 el.addEventListener('click', function(e){
     /*#i274.i275.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.facebook.com/paramountvideomexico/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.facebook.com/paramountvideomexico/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
